# 2023.1_G5_Funcional_CalculadoraIR

./: README.md  dockerfile  makefile
calculadora/: .gitignore  cabal.project.freeze  calculadora.cabal  package.yaml  stack.yaml
calculadora/app/: Main.hs
calculadora/src/: Contrib.hs  Contribuinte.hs  Deducao.hs  Lib.hs  Menu.hs  MenuImposto.hs  Pessoa.hs  User.hs  Util.hs
calculadora/src/CalculoDeImposto/: Deducao.hs  Pessoa.hs
