cabal-version: 1.12

name:           calculadora
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/calculadora#readme>
homepage:       https://github.com/githubuser/calculadora#readme
bug-reports:    https://github.com/githubuser/calculadora/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2023 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/calculadora

executable calculadora-exe
  main-is: Main.hs
  other-modules:
      Lib
    , Util
    , MenuImposto
    , Contribuinte
    , Menu
    , Contrib
    , Paths_calculadora
  hs-source-dirs:
      app
    , src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
    , selda
    , selda-sqlite
    , mtl
    , text
  default-language: Haskell2010

